# SigGenTracker

./: .gitignore  CHANGELOG.md  README.md  conftest.py  hacs.json  pyproject.toml  simulate_retrieval.py  test_auth_live.py
.github/workflows/: validate.yaml
custom_components/sigenergy_cloud/: __init__.py  api.py  config_flow.py  const.py  manifest.json  select.py  sensor.py  strings.json  switch.py
custom_components/sigenergy_cloud/translations/: en.json
docs/: plan.md
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_init.py  test_select.py  test_sensor.py  test_switch.py
