[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sigenergy-cloud"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["custom_components*", "tests*"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "TC002",  # HA needs runtime imports, not TYPE_CHECKING-only
    "TC003",  # same - stdlib imports used at runtime in HA
    "RUF012", # HA pattern uses mutable class-level defaults
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components"]
